提交笔记修改

--- a/编程心得.md
+++ b/编程心得.md
@@ -77,3 +77,57 @@
 ## **5. 情绪：远离消耗精力的人和事 精力放在自己身上 主动做时间的主人 获得平静的力量**
 
 ## **6. 宽容：对自己宽容 不要过度压迫自己 保持良好的心态**
+
+# **超强学习！**
+
+## **1.明确目标及范围**
+
+互联网这个行业不同于其他行业，知识体系实在是过于庞大，知识更新非常快。作为一个普通人，无法全部学完，所以我们在提升技术的时候，首先需要明确一个目标，然后制定好完整的计划，同时找到好的学习方法，这样才能更快的提升自己。
+
+举例：我是做Android开发的，我不会今天去看看C++，明天去学学Python。我首先会选择提升Android开发能力，优先学习Android开发相关内容，本领域学习掌握到一定深度，再去拓宽其他知识面。学习自己领域内知识我会优先汇总整理本专业范围内的知识体系图谱，类似这种：
+
+## **2.学习方法**
+
+### 1.看书
+
+优点：书最大的特点我觉得是知识全面 、严谨
+
+缺点：有些枯燥，一本书可能很多内容都对自己帮助不大，可能对我有有用的就一两个章节
+
+### **2看视频**
+
+优点：视频容易入门，可以看到操作及演示
+
+缺点：不成体系，一般都是讲重点，忽略细节，很多系列的视频后面的都是收费的
+
+### **3.逛技术类网站**
+
+优点：获取新技术、可以看到同行们都学哪些，不至于掉队
+
+缺点：内容庞杂，水平参差不齐，没有鉴别能力容易被误导
+
+### **4.报培训班**
+
+优点：完整、成体系
+
+缺点：时间要求高、学习成本高
+
+### **5.有领导或者同事在工作中指导你**
+
+优点：我认为这样学习的方法是最快的
+
+缺点：碰到这样的人需要运气，要珍惜  
+
+## **3.编程技巧的提高**
+
+为什么上面要啰啰嗦嗦的说一大堆学习方法，因为我认为所谓的技巧提高也是有前置条件的，就是你得有一个好的基础，不然谈不上提高，想要提高，基础必须得很牢固，所以你得先打好基础。
+
+举个例子：我2012年刚开始学Java编程时候，那会开发都是用Eclipse手写Bean实体类，后来随着开发工具改为IDEA,再后来转移动开发用Android Studio知道有插件可以直接生成Bean实体类，不用手动写了，直接把后台的JSON字符串拿过来拷贝到工具中一键生成，生成好就可以直接用了。但是如果你没有手写过，直接就用工具生成，那么生成出来的代码有多少方法、每个方法的作用，可能你都不清楚，所以这就是基础的重要性。
+
+### **1.多实践**
+
+举个例子：我当时刚入行学java编程，我的培训老师讲到空指针知识点的时候就说：如果将来你们从事编程行业，这个问题会一直陪伴你们！其实当时我听到这句话，内心想的是：这么简单的东西，还会出问题？
+
+后来我想不用我多说，只要真正写过代码的人，99%的人都应该碰到过这个问题。所以别人教你各种方法，和你说再多都不如你真正写一次让你记忆深刻。
+
+编程技巧的提高我理解没有什么捷径可走，一定是做的项目多了，踩的坑多了积累出的经验。
