提交笔记修改

--- a/编程心得.md
+++ b/编程心得.md
@@ -124,10 +124,63 @@
 
 举个例子：我2012年刚开始学Java编程时候，那会开发都是用Eclipse手写Bean实体类，后来随着开发工具改为IDEA,再后来转移动开发用Android Studio知道有插件可以直接生成Bean实体类，不用手动写了，直接把后台的JSON字符串拿过来拷贝到工具中一键生成，生成好就可以直接用了。但是如果你没有手写过，直接就用工具生成，那么生成出来的代码有多少方法、每个方法的作用，可能你都不清楚，所以这就是基础的重要性。
 
-### **1.多实践**
+### **3.1多实践**
 
 举个例子：我当时刚入行学java编程，我的培训老师讲到空指针知识点的时候就说：如果将来你们从事编程行业，这个问题会一直陪伴你们！其实当时我听到这句话，内心想的是：这么简单的东西，还会出问题？
 
 后来我想不用我多说，只要真正写过代码的人，99%的人都应该碰到过这个问题。所以别人教你各种方法，和你说再多都不如你真正写一次让你记忆深刻。
 
 编程技巧的提高我理解没有什么捷径可走，一定是做的项目多了，踩的坑多了积累出的经验。
+
+### **3.2多思考**
+
+除了实践，还有一点就是在做任何功能、解决任何问题的时候都要多一些思考。如果脱离思考，即便你做的项目再多，也只是机械的重复，这次我碰到一个空指针bug，解决后是不是要思考下下次如何避免？下次再写类似的代码时，是不是要多加一些判断？是不是要考虑和后台商量数据传输规则，过滤掉空项？即便后台处理了，是不是要考虑后台传值有异常时，我们前端如何处理展示？有人说后台犯错，还需要我买单？小伙子，格局要提高下。大家是一个团队，是一个整体，先不管谁的问题，项目出了问题，大家都有责任，要把自己负责的功能做好、提前规避掉各种风险才是一个成熟的程序员。
+
+### **3.3多沟通**
+
+提升自己还有一个很好的途径是和行业内的人多沟通，可以是你的同学、你的同事、你的领导都可以。因为在聊天的时候可能会不经意就知道了一些新的知识点，学到了新的技能，我以前是做Android开发的，不瞒大家说，我当时都做到部门经理了，还没用过ADB无线调试，以前习惯了插根线去真机上调试，有次和部门新来的一个开发聊天时，从他那里学到的无线调试方法。方便了很多，有的时候线坏了也不担心了，类似的这种场景还有很多。所以平时多和周围的人沟通一下、聊聊技术是一个很不错的方式。
+
+### 3.4多学习
+
+互联网行业技术的发展日新月异，新技术层出不穷，具有良好的学习能力，能及时获取新知识、随时补充和丰富自己，已成为程序员职业发展的核心竞争力。一个能够不断进步的人才有更辽阔的未来和更可观的前景，尤其是对于IT行业这种每时每刻都充斥着改变的领域，学习能力更是必不可少的存在。所以我们必须不停的去学习才能保证我们不掉队，本身就是一个活到老学到老的行业，可以针对性的去看行业内一些大神的博客和公众号，我有很多东西都是从一个大神的博客学到的，其他的学习方式在第一部分我也都提到了，大家根据自己实际情况做选择即可。
+
+### 3.5多总结
+
+每天的工作和学习其实是很枯燥的，需要坚持，最好的办法就是自己回忆每天学到的内容，然后把他写下来。写博客是一个很好的方式，可以帮你加深记忆，同时提高对这个知识点的理解。很多人不敢开始，怕自己写的内容太简单被别人笑话，其实大可不必，只要是自己思考过的内容都可以记录下来，我们需要做的是给自己做积累，不用在意其他人眼光。
+
+ 我在刚开始创作的时候就是记录基础的知识点，后来慢慢写一些解决具体问题的文章，再到后面就写归纳总结类的文章。现在转管理慢慢会写一些行业类和管理类的文章，总之就是一直在写。这个过程坚持下来会帮助你加深对知识的理解，另外后面碰到同类问题还是看下之前是如何解决的，我经常碰到同样的问题，但是还是忘记自己当时是如何解决的，后来就去自己的博客看一下当时如何解决的，还是那句老话：好记性不如烂笔头，不断复盘总结是非常重要的。
+
+## **4.编程的习惯和技巧**
+
+开发做了这么多年，积累了一些经验，这里和大家分享下：
+
+ 1.做项目，先问清楚需求，然后自己用思维导图工具，把各种可能性都罗列出来，都想清楚后再去建项目，写代码。有一句非常经典的话：Think more, Code less！
+
+ 2.碰到没接触过的功能直接去github上面搜、搜的时候找star比较多的下载下来跑一下试试，学会用关键字检索，关键字一定要精简，这样你搜出来的内容匹配度才高，比如你搜一个开源视频功能组件，可以这样写：视频播放器，然后选择Most stars ，一般前几个都是主流的。
+
+![img](编程心得.assets/92e4e9a6faad499b821501c042bc7d38tplv-k3u1fbpfcp-zoom-in-crop-mark4536000-16723223160991.awebp)
+
+3.写代码一定要保持良好编码习惯，最好按照一套固定的编码规范来写，编码规范很多大厂都有发过。比如 函数、变量需要定义的有意义，让别人要能一眼就看懂，这部分建议多看源码提高，定义的变量可能还需要避开一些三方库函数或者变量名。
+
+4.写代码的时候对于一些关键的函数和逻辑要写注释，加上必要说明，解释基本逻辑。但是千万别到处都是注释，如果是那样，一定是你的代码写的比较差，不易理解。
+
+5.写代码不是越复杂越好，反而是越简单越好，函数一定要定义的简单，如果太复杂就定义多个函数。比如：for循环一定要减少层级，层级太多一定要想办法优化处理。
+
+6.定义变量一定要注意初始化，定义数组一定要防止下标越界。
+
+7.一些好的函数或者功能一定要单独记录保存，我建议整理一个自己的工具库，把好用的功能或者工具类都保存下来。
+
+8.养成一个随时ctrl+s 保存的习惯，这个不必多说，吃过一次亏就记住了。
+
+9.尽量复用对象、多定义使用局部变量、避免随意使用静态变量
+
+10.养成加TODO的习惯，比如一些自己不太理解的点、一些需要后续优化的点、一些没有处理好的逻辑等等加上TODO后续查找起来非常方便。
+
+11.删除不必要的代码，保持整体的整洁，留着以备不时之需可以通过git版本控制等来解决。
+
+12.重构有利于提高代码维护的效率，对于当时因为时间等原因写出来的一些比较乱的代码需要花时间去重构，一定是对自己有帮助。
+
+13.把自己常用的技术网站、工具网站、资源网站都做好分类收藏为页签，可以方便查找，提高效率。
+
+上面是个人的一些经验分享，如有错误希望大家批评指出，后续想到其他内容也会随时补充，写代码需要考虑正确性、可读性、鲁棒性、可测试性、可以扩展性、可以移植性、性能等等一系列问题，所以需要抱着一个严谨的态度对待，做这行有一个好的心态是非常重要的。
+
